Opened 14 years ago

Closed 14 years ago

#7300 closed bug (fixed)

Crash when saving after adding an avatar

Reported by: humdinger Owned by: phoudoin
Priority: normal Milestone: R1
Component: Applications/People Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev40612.

First a smaller issue: after drag&dropping an image into the People window and pressing ALT+S to save, closing the window will show an alert anyway that asks to save, quit or cancel.

If you press "Quit", People crashes, but the saved image seems to stick.
If you press "Save", People crashes, the image seems to be lost.

This is the backtrace:

[tcsetpgrp failed in terminal_inferior: Invalid Argument]
Thread 4226 caused an exception: Segment violation
[...]
[Switching to team /boot/system/apps/People (4222) thread w>test (4226)]
0x00000000 in ?? ()
(gdb) bt
#0  0x00000000 in ?? ()
#1  0x006033b9 in BBitmapStream::~BBitmapStream ()
   from /boot/system/lib/libtranslation.so
#2  0x0020e312 in PersonView::Save ()
#3  0x0020fe0f in PersonWindow::QuitRequested ()
#4  0x002c8541 in BLooper::_QuitRequested () from /boot/system/lib/libbe.so
#5  0x002c8659 in BLooper::DispatchMessage () from /boot/system/lib/libbe.so
#6  0x0038c088 in BWindow::DispatchMessage () from /boot/system/lib/libbe.so
#7  0x0038798d in BWindow::task_looper () from /boot/system/lib/libbe.so
#8  0x002c9eca in BLooper::_task0_ () from /boot/system/lib/libbe.so
#9  0x0067dc00 in thread_entry () from /boot/system/lib/libroot.so
#10 0x7003ffec in ?? ()
(gdb) 

Change History (3)

comment:1 by anevilyak, 14 years ago

Owner: changed from axeld to phoudoin
Status: newassigned

comment:2 by phoudoin, 14 years ago

Status: assignedin-progress

comment:3 by phoudoin, 14 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev41066.

Note: See TracTickets for help on using tickets.