Fix #7300: * When saving, the internal bitmap wasn't detached from stream, which then deleted it, paving the road to a crash at next bitmap access. * When saved, notify PictureView that current and original pictures are the same.

Also, add support for bitmap paste (needs more improvement) and
to avoid reloading picture on B_STAT_CHANGED after our own save operation.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41066 a95241bf-73f2-0310-859d-f6bbb57e9c96